fix slider overlap

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -355,7 +355,7 @@ body {
     bottom: 0;
     opacity: 0;
     transition: opacity 1.5s cubic-bezier(0.4, 0, 0.2, 1);
-    display: flex;
+    display: none;
     align-items: center;
     pointer-events: none;
     z-index: 1;
@@ -365,6 +365,7 @@ body {
     opacity: 1;
     pointer-events: auto;
     z-index: 2;
+    display: flex;
 }
 
 .hero-content {
